# ML_classes_structure_design

./: .gitignore  README.MD  classes_diagram.drawio  pyproject.toml
file_handlers/: MediaFile.py
file_handlers/audio_file_handlers/: AudioFile.py  FileMP3.py
file_handlers/data_sources_handlers/: LocalFileHandler.py  MediaFileHandler.py  NFSFileHandler.py  S3FileHandler.py
file_handlers/picture_file_handler/: PictureFile.py
file_handlers/video_file_handler/: VideoFIle.py
format_converters/: MediaFileFormatConverter.py  OggToMp3Converter.py
