[tool.poetry]
name = "ml-classes-structure-design"
version = "0.1.0"
description = ""
authors = ["raulett <raulett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.57"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
